Updated homepage and some images for the readme
Made newspaper page less ugly (barely)
Updated the homepage and the script to remove 'Funky' option as it has no corresponding stylesheet and was unusable.

--- a/SarahEvans.html
+++ b/SarahEvans.html
@@ -21,7 +21,7 @@
 	  <div class="dropdown-content">
 	    <p class="dropdown-button active" onclick="changeStyle('Flat-Rounded')">Blob</p>
 	    <p class="dropdown-button" onclick="changeStyle('Shadow')">Shadow</p>
-	    <p class="dropdown-button">Funky</p>
+	    <!--<p class="dropdown-button">Funky</p>-->
 	    <p class="dropdown-button" onclick="changeStyle('Newspaper')">Newspaper</p>
 	    <p class="dropdown-button" onclick="changeStyle('Notebook')">Notebook</p>
 	  </div>
