--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="change-buttons-container">
     <div class="change-colour-container">
-      <button title="Change background colour" class="button" onclick="changeColour()">🎨</button>
+      <button title="Change background to a random colour" class="button" onclick="changeColour()">🎨</button>
       
     </div>
 <p id="seasonText"></p>
@@ -146,3 +146,4 @@ viewBox="0 0 760 80"  shape-rendering="auto">
   <script src="scripts.js"></script>
   </body>
 </html>
+
