--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="change-buttons-container">
     <div class="change-colour-container">
-      <button title="Change background to a random colour" class="button" onclick="changeColour()">🎨</button>
+      <button title="Change background colour" class="button" onclick="changeColour()">🎨</button>
       
     </div>
 <p id="seasonText"></p>
@@ -45,47 +45,45 @@
     </div>
   </div>
             
+	<div class="section center-aligned information">
+          <p><i>Phone:</i> 0000 000 000 • <i>Email:</i> example@email.com • <i>Location:</i> Melbourne, Victoria 
+	  <br ><i>LinkedIn:</i> <a href="linkedin.com/in/sarahevans456">linkedin.com/in/sarahevans456</a> • <i>GitHub:</i> <a href="github.com/Sezzy456">github.com/Sezzy456</a> 
+	  <br >Full Australian Driver’s Licence • RSA Certified</p>
+	</div>
 
-            <p><b>Phone:</b> 0000 000 000</p>
-            <p><b>Email:</b> example@email.com</p>
+	<div class="section career-overview">
 
-            <h3>Personal Attributes</h3>
+            <h3>Career Overview</h3>
             <p>
-                I am seeking a position that can help develop my 
-                practical skills and capabilities. I am also willing 
-                to complete any further training that my new employer 
-                considers relevant. I am courteous and have a 
-                professional manner.
+                I'm a design graduate with a strong interest in web, IT, and game development. I’ve built up technical skills in both design tools and coding, and I’m keen to bring that into a real-world role. I’ve worked in hospitality for several years, so I’m good with people, quick to pick things up, and ready to grow in a creative or tech-based team.
             </p>
+	</div>
 
+	<div class="section education">
             <h3>Education</h3>
-            <ul>
-                <li>
-                    <b>University of Melbourne</b>: 2021 March - 2024 November <br > 
-                    Bachelor of Design majoring in User Experience Design
-                </li>
-                <li>Screen and Media Certificate III</li>
-            </ul>
+	    <p><b>Bachelor of Design (User Experience Design)</b> 
+		<br ><e>University of Melbourne</e> - 2024
+            </p>
+	    <ul>
+		<li>Focused on user research, UI/UX methodologies, journey mapping, ideation, prototyping, web accessibility, and front-end tools</li>
+	    </ul>
+	</div>
 
-            <h3>Employment History</h3>
-            <ul>
-                <li>
-                    <b>Victorian Emergency Management Institute</b>: 2021 Jan - 2025 June<br >
-                    Kitchenhand: Making, preparing, and serving food <br >
-                    Bartender: Serving drinks, cleaning customer spaces and 
-                    cleaning and maintaining coffee machines <br >
-                    Housekeeping: Cleaning rooms, bathrooms, making beds 
-                </li>
-                <li>
-                    <b>Textured Concept Foods</b>: 2019 May - October <br >
-                    Working with foods and moulding in an industrial kitchen 
-                    environment. This taught me to listen carefully and 
-                    follow instructions and to be very thorough when completing 
-                    all duties assigned to me. This position required working 
-                    as part of a team and autonomously.
-                </li>
-            </ul>
+	<div class="section technical-skills">
 
+	</div>
+	<div class="section work-experience">
+            <h3>Work Experience</h3>
+		<p><b>VEMI</b> - Hospitality Staff
+		<br >2021 - 2025</p>
+            <ul>
+                <li>Worked in a variety of roles: Front of House, Kitchenhand, Housekeeping, and Bartender</li>
+                <li>Developed strong time management and adaptability across tasks and environments</li>
+		<li>Delivered friendly and efficient customer service under pressure</li>
+		<li>Practised clear team communication and multitasking on the job</li>
+            </ul>
+	</div>
+	<div class="section skills">
             <h3>Skills</h3>
             <ul>
                 <li>Current Driver's License</li>
@@ -95,14 +93,19 @@
                     JavaScript, SQL, C, Java</li>
                 <li>Current RSA - Responsible Serving of Alcohol</li>
             </ul>
-
-            <h3>Hobbies and Interests</h3>
+	</div>
+	<div class="section certifications">
+            <h3>Certifications</h3>
     <ul>
-      <li>Computer Programming</li>
-      <li>Netball</li>
-      <li>Tennis at RCTA</li>
+      <li>Certificate III in Screen and Media</li>
+      <li>RSA (Responsible Service of Alcohol)</li>
+      <li>Full Australian Driver's License</li>
     </ul>
+	</div>
+	<p class="center-aligned">References available upon request</p>
+  
   </div>
+
 
 </main>
 
@@ -146,4 +149,3 @@ viewBox="0 0 760 80"  shape-rendering="auto">
   <script src="scripts.js"></script>
   </body>
 </html>
-
