--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	  </div>
 	</div>
 
+	<div class="change-layout-container">
+      	  <a href="SarahEvansGraphic.html"><button title="Change resume layout" class="button resume-button" onclick="changeLayout()">📄</button></a>
+        </div>
 
 </header>
 
@@ -36,11 +39,9 @@
   <div class="change-buttons-container">
     <div class="change-colour-container">
       <button title="Change background colour" class="button" onclick="changeColour()">🎨</button>
-      
     </div>
 <p id="seasonText"></p>
     <div class="change-season-container">
-
             <button title="Change the season" class="button right-button" value="null" onclick="cycleSeason()" id="seasonButton">☀️</button>
     </div>
   </div>
