--- a/SarahEvansGraphic.html
+++ b/SarahEvansGraphic.html
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="change-layout-container">
-      	  <a href="SarahEvans.html"><button title="Change resume layout" class="button resume-button" onclick="changeLayout()">📄</button></a>
+      	  <a href="index.html"><button title="Change resume layout" class="button resume-button" onclick="changeLayout()">📄</button></a>
         </div>
 
 </header>
@@ -196,4 +196,5 @@ viewBox="0 0 760 80"  shape-rendering="auto">
 
   <script src="scripts.js"></script>
   </body>
+
 </html>
