--- a/SarahEvansGraphic.html
+++ b/SarahEvansGraphic.html
@@ -52,7 +52,8 @@
   <div class="column">
 
 	<div class="section information">
-          <p>📞<i>Phone:</i> 0000 000 000 
+	  <h3>Contact</h3>
+      <p>📞<i>Phone:</i> 0000 000 000 
 	  <br >📧<i>Email:</i> example@email.com 
 	  <br >📍 <i>Location:</i> Melbourne, Victoria 
 	  <br >🌐<i>LinkedIn:</i> <a href="linkedin.com/in/sarahevans456">linkedin.com/in/sarahevans456</a> 
@@ -198,3 +199,4 @@ viewBox="0 0 760 80"  shape-rendering="auto">
   </body>
 
 </html>
+
